2002-08-17  Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/3Containers/main.m: The scroll view for the table view and
	outline view were not being added to the window prior to the 
	setDocumentView call.   This was causing an assertion in NSView to 
	fail.

2002-08-14  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>

	* GormSplitViewEditor.m: removed an extra ; that was breaking gcc 2.*.
	* GormBoxEditor.m: removed NSLogs.
	* GormViewEditor.m: neater display of intelligent placement hints.
	* GormControlEditor.m: intelligent placement take minsize into account.
	* GormViewWithContentEditor.m: fixed display problem when moving 
	selection.
	* GormNSTableView.m [GormNSTableView -setGormDelegate]: changed return
	type from id to void (this was conflicting with GormNSTableView.h).
	
2002-08-14  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>

	* Major changes in editing widgets.
	* Basic support for NSSplitView and NSTabView.
	* Intelligent placement and resizing of widget.
	* Dropping widget into not yet opened box/tabview.
	* grouping into splitviews/boxes and ungrouping.
	* direct editing of NSButton's and NSBox's title.
	* Many small fixes.

2002-07-22  Gregory John Casamento <greg_casamento@yahoo.com>

	* Resources/GormCustomClassInspector.[gorm,classes]: Added.
	* GormCustomClassInspector.[hm]: Added.	Custom class support is not 
	fully functional.   I am currently working on it, but I thought 
	it would be useful to commit the code sooner rather than later.
	* Gorm.m: Made some fixes to prevent core dump.
	* GormClassManager.m: Removed some debugging NSLog calls and
	added logic to prevent the addition of duplication outlets/actions
	to a class.
	* GormDocument.m: Finished up the delete functionality.   Added code
	to show an alert panel when the user tries to add a duplicate outlet/
	action to the class.
	* GormOutlineView.m: Added method to allow deletion of a given
	row directly from the outline view.